testing/Travis/testcases/prototype/shouldSucceed/try13.adl
CONTEXT Test IN ENGLISH

PATTERN Test13
RELATION r[A*A]
-- r[B*C] -- enabled in try15.adl
RULE Test: r[A*A] = r\/I
ENDPATTERN

ENDCONTEXT

{- 
   Purpose: to verify that the checker can deduce that r\/I::[A*A]
   Result: PASS
   Reason: Relation I takes its type from r,
           so the checker deduces that I[A] is meant.
   By the way, this should work for r[A*A] = r/\I as well.
-}